[package]
name = "ed25519-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
ssh-key = { version = "0.5.1", features = ["ed25519", "serde"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
